		* New visualization types:
			* Lollipop plot
			* Q-Q plot
		* New worksheet theme "Dracula"
	* [spreadsheet]
		* Spreadsheet linking - allow to synchronize number of rows across multiple spreadsheets
		* Extended search and replace
		* Column statistics spreadsheet - child spreadsheet showing various statistical properties of the parent spreadsheet
		* Remove/mask rows with missing values
	* [notebook]
		* Export to PDF

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)

Bug fixes:
	* Set mousemode to selection when leaving the plot (Issue #614)
	* Fix plot range field not being updated (Issue #603)
	* Fix wrong axis tick type used (Issue #571)
	* Fix wrong infoelement position when removing active curve (Issue #666)

Internal:
	* Switch from C++11 to C++17
	* Reduce code duplication caused by multiple plot types (Issue #540)
	* update included QXlsx to 1.4.6
	* Log skipped tests

-----2.10.1 (12.07.2023) -----
Bug fixes:
	* Support markdown library discount version 3
	* Improve Vector BLF dependency (git download must be enabled if needed)
	* Correctly use system header of system QXlsx (BUG 468651)
	* Fix group separator problem in formulas (BUG 468098)
	* Improve log scales (auto scaling and tick number)
	* Improve auto scale (Issue #536)
	* Fix limits when changing scale (Issue #446)
	* Use system liborigin headers if linking against system liborigin (BUG 469367)
	* Don't clear the undo history when saving the project (BUG 470727)
	* Properly react on orientation changes in the worksheet properties explorer
	* In the collections of example projects, color maps and data sets allow also to search for sub-strings and do the search case-insensitive
	* Properly save and load the property "visible" for box and bar plots in the project file
	* Fixed copy&paste and duplication of box and bar plots
	* .xlsx import:
		* Fix crash importing empty cells
		* support datetime import (Issue #531)